first changes round

--- a/views/admin/partials/postulados.jade
+++ b/views/admin/partials/postulados.jade
@@ -11,7 +11,7 @@ div.data_container
                       th Cedula 
                       th Fecha de nacimiento 
                       th Ciudad 
-                      th Acciones 
+                      th Informaciones 
                 tbody
                     tr.row(ng-class="{editing: is_dirty(p)}" ng-repeat="p in postulados" ng-class-odd="'object_row_odd'" ng-class-even="'object_row_even'")
                       td 
