--- a/views/index.jade
+++ b/views/index.jade
@@ -8,13 +8,13 @@ html
     div.home_container
       div.login
         div.center.mbottom15
-          img(class="logo", src="/img/logo.png")
+          img(class="logo", src="/img/siar2.png")
         
 
-        div.center.app_title
-          <h1>SIAR</h1>
-          <h3><strong>S</strong>istema de <strong>I</strong>nformación<br/>
-          <strong>A</strong>cciones <strong>R</strong>eveladas</h3>
+        //-div.center.app_title
+        //-  <h1>SIAR</h1>
+        //-  <h3><strong>S</strong>istema de <strong>I</strong>nformación<br/>
+        //-  <strong>A</strong>cciones <strong>R</strong>eveladas</h3>
 
         if message != ""
           p.error
