--- a/public/css/main.css
+++ b/public/css/main.css
@@ -92,9 +92,9 @@ body {
 
 .logo {
     background-color: #003b6f;
-    margin-top: 20px;
-    padding: 15px 0 0 20px;
-    border-radius: 4px;
+    margin-top: 60px;
+    border-radius: 10px;
+    border: 1px solid white;
 }
 .login {
     position: fixed;
@@ -230,6 +230,11 @@ input.cedula_input {
   border-bottom: 1px solid #003b6f;
 }
 
+.title_bar {
+  color: white;
+  margin-right: 8px;
+}
+
 ul.menu_options {
   list-style-type: none;
   padding-left: 0;
@@ -262,7 +267,15 @@ input.inline_edit_input {
     padding: 5px;
 }
 
-.inline_edit_text {  
+input.quick_input {
+    height: 28px;
+    padding: 5px;
+    border: 1px solid #d6d6d6;
+    width: 50px;
+}
+
+.inline_edit_text,
+.inline_edit_longtext {  
     border-left: 1px solid #D6D6D6;
     border-bottom : 1px solid #D6D6D6;
     padding: 0 0 5px 5px;
@@ -467,7 +480,9 @@ input[type=file] {
   width: 120px;
   border: none;
 }
-
+.bordered {
+ border: 1px solid #003b6f;
+}
 .action_button {
   background-color: #003b6f;
   color: white;
@@ -480,6 +495,10 @@ input[type=file] {
     height: 45px;
     border: 1px solid #003b6f;
     padding: 0 10px;
+}
+
+.top_actions {
+  margin-right: 600px;
 }
 
 .cancel_button {
@@ -804,7 +823,7 @@ li.acciones_link {
 }
 
 .inline_edit_longtext {
-  width: 472px;
+  width: 452px;
   height: 34px;
   overflow-y: hidden;
 }
@@ -893,4 +912,31 @@ th.hpad {
 
 #diagram_holder {
   margin-top: -150px;
+}
+
+.delete_item {
+  background-image: url('/img/delete_small.png');
+  width: 16px;
+  height: 16px;
+  display: inline-block;
+  float: right;
+  margin-top: 5px;
+}
+
+.connection_ok {
+  background-image: url('/img/green.png');
+  width: 32px;
+  height: 32px;
+}
+
+.no_connection {
+  background-image: url('/img/red.png');
+  width: 32px;
+  height: 32px;
+}
+
+.ping {
+  vertical-align: middle;
+  margin-left: 10px;
+  margin-top: 5px;
 }
