--- a/views/admin/partials/users.jade
+++ b/views/admin/partials/users.jade
@@ -10,13 +10,13 @@ div.data_container
                       th Cedula
                       th Contraseña 
                       th Rol
-                      th Acciones
+                      th Informaciones 
                 tbody
                     tr.row(ng-class="{editing: is_dirty(user)}" ng-repeat="user in usuarios" ng-class-odd="'object_row_odd'" ng-class-even="'object_row_even'")
                       td 
                         div(input-inline-edit="user.username" on-save="set_dirty(user)" ng-focus="edit()" tabindex="{{ $index*10 + 1 }}")
                       td 
-                        div(input-inline-edit="user.cedula" on-save="set_dirty(user)" ng-focus="edit()" tabindex="{{ $index*10 + 2 }}")
+                        div(input-inline-number="user.cedula" on-save="set_dirty(user)" ng-focus="edit()" tabindex="{{ $index*10 + 2 }}")
                       td 
                         div(input-inline-password="user.password" on-save="set_dirty(user)" ng-focus="edit()" tabindex="{{ $index*10 + 3 }}")
                       td 
