--- a/views/partials/jyp_parapolitica.jade
+++ b/views/partials/jyp_parapolitica.jade
@@ -7,11 +7,12 @@ div.info_wrapper
          div.hecho_lista_title
             Hay {{root.parapoliticas.length}} asuntos de parapoliticas para este postulado.
          div.hecho_titulo(ng-class="{selected: $index==root.selectedParapoliticaIndex, dirty: parapolitica.dirty}" ng-click="get_parapolitica($index)" ng-repeat="parapolitica in root.parapoliticas") {{parapolitica.titulo}}
+            div.delete_item(ng-click="delete_pp(parapolitica)")
 
 
    div.dialog.create_parapolitica(ng-show="root.create_parapolitica")    
       h2.info_subtitle Agregar nuevo asunto de parapolitica
-      label.form Titulo del hecho
+      label.form Titulo de la relación 
       br
       input.dialog_input(ng-model="root.new_parapolitica_title" name="root.new_parapolitica_title" required type="text")
       br
