--- a/views/partials/jyp_relaut.jade
+++ b/views/partials/jyp_relaut.jade
@@ -7,6 +7,7 @@ div.info_wrapper
          div.hecho_lista_title
             Hay {{root.relauts.length}} asuntos de Relaciones Autoridades para este postulado.
          div.hecho_titulo(ng-class="{selected: $index==root.selectedRelautIndex, dirty: relaut.dirty}" ng-click="get_relaut($index)" ng-repeat="relaut in root.relauts") {{relaut.titulo}}
+            div.delete_item(ng-click="delete_relaut(relaut)")
 
 
    div.dialog.create_relaut(ng-show="root.create_relaut")    
