--- a/views/partials/menores.jade
+++ b/views/partials/menores.jade
@@ -8,13 +8,14 @@ div.info
             div.hecho_lista_title
                Hay {{root.menores.length}} menores para este postulado.
             div.hecho_titulo(ng-class="{selected: $index==root.selectedMenorIndex, dirty: menor.dirty}" ng-click="get_menor($index)" ng-repeat="menor in root.menores") 
+               div.delete_item(ng-click="delete_menor(menor)")
                div(ng-hide="menor.nombres == 'No especificado'") {{menor.nombres}}&nbsp; {{ menor.apellidos}}
                div(ng-show="menor.nombres == 'No especificado'") {{menor.cedula_menor}}
 
 
       div.dialog(ng-show="root.create_menor")    
          h2.info_subtitle Agregar nuevo menor
-         label.form Cedula del menor
+         label.form Nombre del menor
          br
          input.dialog_input(ng-model="root.new_menor_title" name="root.new_menor_title" required type="text")
          br
