new myview versions of tabs

--- a/views/partials/myview.jade
+++ b/views/partials/myview.jade
@@ -24,10 +24,10 @@ div.myview_wrapper
       tab.info_tab.active(heading="Hoja de Vida" select="hv()")
         div.tab_content(ng-include="'/partials/myview_hv'")        
       tab.info_tab(heading="Transicional" select="jyp()") 
-        div.tab_content(ng-include="'/partials/jyp'")
+        div.tab_content(ng-include="'/partials/myview_jyp'")
       tab.info_tab(heading="Procesos" select="proces()") 
-        div.tab_content(ng-include="'/partials/proc'")
+        div.tab_content(ng-include="'/partials/myview_proc'")
       tab.info_tab(heading="Bienes" select="bienes()")
-        div.tab_content(ng-include="'/partials/bienes'") 
+        div.tab_content(ng-include="'/partials/myview_bienes'") 
       tab.info_tab(heading="Menores" select="menores()") 
-        div.tab_content(ng-include="'/partials/menores'")
+        div.tab_content(ng-include="'/partials/myview_menores'")
