--- a/views/partials/myview_fosas.jade
+++ b/views/partials/myview_fosas.jade
@@ -1,101 +1,109 @@
 div.info_wrapper
    div.navegacion_hechos
-      if (is_admin)
-         button.add_action.right(ng-click="add_fosa()")
-      div.empty(ng-hide="root.fosas.length") No hay fosas para este postulado.
+      div.empty(ng-hide="root.fosas.length") No hay fosas para usted.
+
       div.hecho_lista(ng-show="root.fosas.length") 
          div.hecho_lista_title
-            Hay {{root.fosas.length}} fosas para este postulado.
+            Hay {{root.fosas.length}} fosas para usted.
          div.hecho_titulo(ng-class="{selected: $index==root.selectedFosaIndex, dirty: fosa.dirty}" ng-click="get_fosa($index)" ng-repeat="fosa in root.fosas") {{fosa.titulo}}
-            div.delete_item(ng-click="delete_fosa(fosa)")
-
-
-   div.dialog.create_fosa(ng-show="root.create_fosa")    
-      h2.info_subtitle Agregar nueva fosa
-      label.form Titulo de la fosa
-      br
-      input.dialog_input(ng-model="root.newfosatitle" name="root.newfosatitle" required type="text")
-      br
-      button.buttons(ng-click="crea_fosa()" ng-disabled="invalid_form") Crear fosa
-      button.buttons(ng-click="cancela_crea_fosa()") Cancelar
 
    div.datos_version(ng-show="root.fosas.length")
+      img.icon.right(ng-click="doPrint()" src="/img/print.png")
       h2.info_subtitle Fosa
-        div(input-inline-edit="root.fosa.titulo" class="inline inline-heading" on-save="set_fosa_dirty()" ng-focus="edit()" tabindex="5")
-      label Subir archivo
-      file-upload.uploadContainer.inline(path="'fosas'" path_id="root.fosa._id" post_id="root.postulado_id")
-         div(ng-show="progressVisible")
-            div.percent {{uploadProgress}}%
-            div.progress-bar
-                div.uploaded(ng-style="{'width': uploadProgress+'%'}")
-      
-      button.buttons.inline(ng-click="view_docs('fosas',root.fosa._id)") Ver archivos
-      table.tab_form_table
+        div.inline.inline-heading {{root.fosa.titulo}}
+      hr.title_separator
+      div.form_wrapper
+       table.tab_form_table
          tr
-            td
+            td.align_right
                label.small_form Enunciada en versión
-               div(input-inline-radio="root.fosa.enunciada" on-save="set_fosa_dirty()" ng-focus="edit()" tabindex="6")
             td
-               label.small_form Hecho relacionado
-               //-div(input-inline-edit="root.fosa.delito" on-save="set_fosa_dirty()" ng-focus="edit()" tabindex="7")            
-               div(input-inline-select="root.fosa.delito" opciones="root.delitos_postulado" on-save="set_fosa_dirty()" ng-focus="edit()" tabindex="7")
-            td
-               label.small_form Hora en mención
-               div(input-inline-edit="root.fosa.hora_mencion" on-save="set_fosa_dirty()" ng-focus="edit()" tabindex="8")
+               div.myview_form_value {{root.fosa.enunciada | spanishBool }}
          tr
+            td.align_right
+               label.small_form Hecho relacionado
             td
+               div.myview_form_value {{root.fosa.delito}}
+         tr
+            td.align_right
+               label.small_form Hora en mención
+            td
+               div.myview_form_value {{root.fosa.hora_mencion}}
+         tr
+            td.align_right
                label.small_form Nombre victima
-               div(input-inline-edit="root.fosa.victima_nombre" on-save="set_fosa_dirty()" ng-focus="edit()" tabindex="10")
             td
+               div.myview_form_value {{root.fosa.victima_nombre}}
+         tr
+            td.align_right
                label.small_form Perfil victima
-               div(input-inline-text="root.fosa.perfil_victima" on-save="set_fosa_dirty()" ng-focus="edit()" tabindex="11")
+            td
+               div.myview_form_value {{root.fosa.perfil_victima}}
 
       h2.info_subtitle.inline Georeferenciación      
-      table.tab_form_table
+      hr.title_separator
+      div.form_wrapper
+       table.tab_form_table
          tr
-            td
+            td.align_right
                label.small_form Pais
-               div(input-inline-select="root.fosa.pais" opciones="root.paises" on-save="set_fosa_dirty()" ng-focus="edit()" ng-focus="edit()" tabindex="21")
             td
+               div.myview_form_value {{root.fosa.pais}}
+         tr
+            td.align_right
                label.small_form Departamento
-               div(input-inline-select="root.fosa.departamento" opciones="root.fosa_depts" on-save="set_fosa_dirty()" ng-focus="edit()" tabindex="22")
             td
+               div.myview_form_value {{root.fosa.departamento}}
+         tr
+            td.align_right
                label.small_form Municipio
-               div(input-inline-edit="root.fosa.municipio" on-save="set_fosa_dirty()" ng-focus="edit()" tabindex="24")
-         tr
             td
+               div.myview_form_value {{root.fosa.municipio}}
+         tr
+            td.align_right
                label.small_form Corregimiento
-               div(input-inline-edit="root.fosa.corregimiento" on-save="set_fosa_dirty()" ng-focus="edit()" tabindex="25")
             td
-               label.small_form Vereda
-               div(input-inline-edit="root.fosa.vereda" on-save="set_fosa_dirty()" ng-focus="edit()" tabindex="26")
+               div.myview_form_value {{root.fosa.corregimiento}}
          tr
+            td.align_right
+               label.small_form Vereda
             td
+               div.myview_form_value {{root.fosa.vereda}}
+         tr
+            td.align_right
                label.small_form Latitud
-               div(input-inline-edit="root.fosa.lat" on-save="set_fosa_dirty()" ng-focus="edit()" tabindex="27")
-            td               
+            td
+               div.myview_form_value {{root.fosa.lat}}
+         tr
+            td.align_right               
                label.small_form Longitud
-               div(input-inline-edit="root.fosa.long" on-save="set_fosa_dirty()" ng-focus="edit()" tabindex="28")      
+            td
+               div.myview_form_value {{root.fosa.long}}
 
 
       h2.info_subtitle Exumada
-      table.tab_form_table
+      hr.title_separator
+      div.form_wrapper
+       table.tab_form_table
          tr
-            td
+            td.align_right
                label.small_form Identificación victima
-               div(input-inline-edit="root.fosa.id_victima" on-save="set_fosa_dirty()" ng-focus="edit()" tabindex="41")
             td
+               div.myview_form_value {{root.fosa.id_victima}}
+         tr
+            td.align_right
                label.small_form Entregada a los familiares
-               div(input-inline-radio="root.fosa.entregada_familia" on-save="set_fosa_dirty()" ng-focus="edit()" tabindex="42")
+            td
+               div.myview_form_value {{root.fosa.entregada_familia | spanishBool }}
             
-   div.file_browser(ng-show="showFiles")
-      span.close_button.right
-         img(id="close_dialog_button" alt="Cerrar" title="Cerrar" ng-click="close_browser()" src="/img/close.png")
-      div.file_browser_content         
-         div.empty(ng-show="root.files.length < 1") 
-            h1 No hay archivos para esta fosa
-         div.files(ng-show="root.files.length > 0")
-            div.file(ng-repeat="file in root.files")
-               a(ng-href="/docs/{{root.postulado_id}}/fosas/{{root.fosa._id}}/{{file}}")
-                  img(src="/img/docs_icon.png")
-                  p.doc_title {{file}}
+   //-div.file_browser(ng-show="showFiles")
+   //-   span.close_button.right
+   //-      img(id="close_dialog_button" alt="Cerrar" title="Cerrar" ng-click="close_browser()" src="/img/close.png")
+   //-   div.file_browser_content         
+   //-      div.empty(ng-show="root.files.length < 1") 
+   //-         h1 No hay archivos para esta fosa
+   //-      div.files(ng-show="root.files.length > 0")
+   //-         div.file(ng-repeat="file in root.files")
+   //-            a(ng-href="/docs/div.myview_form_value {{.postulado_id}}/fosas/{{root.fosa._id}}/{{file}}")
+   //-               img(src="/img/docs_icon.png")
+   //-               p.doc_title {{file}}
