--- a/views/partials/postulado.jade
+++ b/views/partials/postulado.jade
@@ -5,7 +5,7 @@ div(ng-controller="PostuladoCtrl")
         button.upload_button(ng-show="root.show_buttons" ng-click="upload_pic()") Busca imagen
         button.upload_button(ng-show="(root.subirImagen && root.show_buttons)" ng-click="uploadImagen()") Subir imagen 
         div.picture()        
-        img(ng-show="root.postulado.picture" src="{{root.postulado.picture}}" width="100px" height="100px")
+        img(ng-show="root.postulado.picture != ''" src="{{root.postulado.picture}}" width="100px" height="100px")
         input(style="display: none" type="file" ng-model-instant id="fileToUpload" onchange="angular.element(this).scope().setFiles(this)")
         //-label.inline.small_text(ng-show="root.subirImagen" id="uploadFileName")
         
